# synheart-emotion-python

./: .gitignore  LICENSE  MANIFEST.in  README.md  coverage.xml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  publish.yml  test.yml
examples/: basic_usage.py  cli_demo.py  custom_config.py  streaming_data.py
src/synheart_emotion/: __init__.py  config.py  engine.py  error.py  features.py  models.py  result.py  synheart_emotion.py
src/synheart_emotion/data/: .gitkeep  ExtraTrees_120_60_nozipmap.onnx  ExtraTrees_metadata_120_5_nozipmap.json  ExtraTrees_metadata_120_60_nozipmap.json  ExtraTrees_metadata_60_5_nozipmap.json  extratrees_wrist_all_v1_0.meta.json  wesad_emotion_v1_0.json
tests/: __init__.py  test_engine.py  test_features.py
