[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synheart-emotion"
version = "0.0.1"
description = "On-device emotion inference from biosignals (heart rate and RR intervals)"
readme = "README.md"
authors = [
    {name = "Israel Goytom", email = "opensource@synheart.ai"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["emotion", "biosignals", "hrv", "heart-rate", "machine-learning", "healthcare"]

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.0.0",
    "joblib>=1.1.0",
    "xgboost>=1.5.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=0.950",
]
all = [
    "synheart-emotion[ml,dev]",
]

[project.urls]
Homepage = "https://github.com/synheart-ai/synheart-emotion-python"
Documentation = "https://github.com/synheart-ai/synheart-emotion/tree/main/docs"
Repository = "https://github.com/synheart-ai/synheart-emotion-python"
Issues = "https://github.com/synheart-ai/synheart-emotion-python/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
synheart_emotion = ["data/*.json"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
